--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App{
+  position: relative;
   min-height: 100vh;
+  background-color: #000;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.grid{
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr;
+  padding: 1rem;
+  background-color: #0c0c0d;
+  border-radius: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.grid-item{
+  padding: 1rem;
+  width: 100%;
+}
+
+.item-left{
+  position: relative;
+}
+
+.item-right{
+  position: relative;
+}
+
+.item-right p{
+  padding-top: 2rem;
+  font-size: 1.2rem;
+}
+
+.item-right img{
+  margin-top: 2rem;
+  height: 250px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@media only screen and (max-width: 600px) {
+  .grid{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
+    margin-top: 5.5rem;
+    padding: 0.5rem;
+    background-color: #0c0c0d;
+    border-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
-  to {
-    transform: rotate(360deg);
+  .grid-item{
+    padding: 1rem;
+    width: 100%;
   }
+  .item-right img{
+    margin-top: 0;
+    width: 100%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+.alert{
+  display: inline;
+  position: absolute;
+  right: 0.3rem;
+  top: 3rem;
+}
+
+.close span{
+  color: #000!important;
 }
